<resources>
    <string name="app_name">LojaSurfArt</string>

    <string name="Login">Log In</string>
    <string name="signup">Don\'t have an Account? <b>Sign Up</b></string>
    <string name="label1">Don\'t wait</string>
    <string name="logo_name">Spotify</string>
    <string name="label2">Log in or create a new account now</string>
    <string name="email">Enter Email</string>
    <string name="user">Usuário</string>
    <string name="password_user">Senha</string>
    <string name="login_user">Entrar</string>
    <string name="password">Enter Password</string>
    <string name="social">Or Log In using</string>
    <string name="facebook">Facebook</string>

    <string name="surf_art">Surf Art</string>
    <string name="bem_vindo">Bem vindo</string>
    <string name="calcados">Calcados</string>
    <string name="bermudas">Bermudas</string>
    <string name="camisetas">Camisetas</string>
    <string name="produtos">Produtos</string>
    <string name="erro_na_busca_dos_produtos">Erro na busca dos produtos</string>
    <string name="masculino">Masculino</string>
    <string name="comprar">Comprar</string>
    <string name="detalhes">Detalhes</string>
    <string name="camisetas_masculinas">Camisetas Masculinas</string>
    <string name="bermudas_masculinas">Bermudas Masculinas</string>
    <string name="calcados_masculinos">Calçados Masculinos</string>

    <string name="home_activity">Home Activity</string>
    <string name="product_category_activity">Product Category Activity</string>
    <string name="register_activity">Register Activity</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="buscar">Buscar</string>
    <string name="atualizar_pagina">Atualizar página</string>
    <string name="adicionar_produto">Adicionar produto</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lembrar_usuario">Lembrar Usuário</string>
    <string name="nome_da_categoria">Nome da Categoria</string>
    <string name="cadastro_de_categorias">Cadastro de Categorias</string>
    <string name="descricao_da_categoria">Descrição da categoria</string>
    <string name="salvar">Salvar</string>
    <string name="cadastro_de_produtos">Cadastro de Produtos</string>
    <string name="titulo_do_produto">Título do Produto</string>
    <string name="ID_da_categoria_do_produto">ID da Categoria do produto</string>
    <string name="separar_as_tags_por_virgula_ao_escrever">(Separar as tags por vírgula ao escrever)</string>
    <string name="cadastro_de_variantes_dos_produtos">Cadastro de Variantes dos Produtos</string>
    <string name="ID_do_produto">ID do Produto</string>
    <string name="titulo">Título</string>
    <string name="preco_anterior">Preço Anterior</string>
    <string name="preco">Preço</string>
    <string name="quantidade">Quantidade</string>
    <string name="promocao">Promoção</string>
    <string name="tamanho">Tamanho</string>
    <string name="cor">Cor</string>
    <string name="comprimento_em_centimetros">Comprimento em Centímetros</string>
    <string name="largura_em_centimetros">Largura em Centímetros</string>
    <string name="imagens">Imagens</string>
    <string name="separar_as_imagens_por_virgula_ao_escrever">(Separar as imagens por vírgula ao escrever)</string>
    <string name="altura_em_centimetros">Altura em Centímetros</string>
    <string name="peso_em_gramas">Peso em Gramas</string>
    <string name="tags_do_produto">Tags do Produto</string>

    <string name="API_KEY">AIzaSyAZgJF0cbaNvGJphvJuqdPer5D2X0a5WHg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
