<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:visibility="visible" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/textlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/logo_name"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_transparent"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btsignup"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_white"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="#005C97"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/label"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:text="@string/label1"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/label2"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>