<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeActivity">

        <include layout="@layout/toolbar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="#457fca"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvHomeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_activity"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnShirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camisetas"
            app:layout_constraintEnd_toStartOf="@+id/btnCalcados"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnCalcados" />

        <Button
            android:id="@+id/btnCalcados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calcados"
            app:layout_constraintEnd_toStartOf="@+id/btnBermudas"
            app:layout_constraintStart_toEndOf="@+id/btnShirt"
            app:layout_constraintTop_toBottomOf="@+id/txvHomeActivity" />

        <Button
            android:id="@+id/btnBermudas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bermudas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCalcados"
            app:layout_constraintTop_toTopOf="@+id/btnCalcados" />

        <Button
            android:id="@+id/btnProdutos"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produtos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcados" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main_activity_drawer"
        app:menu="@menu/activity_main_drawer_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>